--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,19 @@
       <version>0.11.5</version>
       <scope>runtime</scope>
     </dependency>
+
+    <!-- datasource-proxy to create a read-only proxy for tests -->
+    <dependency>
+        <groupId>net.ttddyy</groupId>
+        <artifactId>datasource-proxy</artifactId>
+        <version>1.11.0</version>
+    </dependency>
+      <dependency>
+          <groupId>org.testcontainers</groupId>
+          <artifactId>jdbc</artifactId>
+          <version>1.21.3</version>
+      </dependency>
+
   </dependencies>
 
   <build>
@@ -168,7 +181,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-      
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
