--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,17 +1,27 @@
-# Test configuration
-spring.datasource.url=jdbc:h2:mem:testdb
+# Test configuration - use H2 in-memory database for unit tests to preserve production data
+# This ensures tests don't interfere with real data while providing full database functionality
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 
+# H2 database configuration
+spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
-logging.level.org.springframework.web=DEBUG
+# Enable auto SQL initialization for test data
+spring.sql.init.mode=embedded
+spring.sql.init.schema-locations=classpath:schema-test.sql
+spring.sql.init.data-locations=classpath:data-test.sql
+spring.sql.init.continue-on-error=true
+
+# Disable Flyway migrations during tests
+spring.flyway.enabled=false
+
+# Logging configuration for tests
 logging.level.com.kursova=DEBUG
+logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-## Disable data initializer in tests to avoid accessing DB before schema creation
-app.data.initialize=false
